RegressionTests/TestSuiteExport/accept/intrinsics.blade
// EXPECT: pass

cog task main() {
    cog var x: u32 = 0;
    x = @encod(x);
    @waitx(100);
}