RegressionTests/TestSuiteExport/reject/inline_asm_invalid_flag_output.blade
// EXPECT: fail
// DIAGNOSTICS: E0304

fn f() void {
    var x: u32 = 0;
    asm {
        MOV {x}, {x}
    } -> state: bool@X;
}